--- a/treasurer/pom.xml
+++ b/treasurer/pom.xml
@@ -8,6 +8,31 @@
   <name>treasurer Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+  
+		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		
+			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -17,5 +42,18 @@
   </dependencies>
   <build>
     <finalName>treasurer</finalName>
+	<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+
+				<configuration>
+					<url>http://localhost:8089/manager/text</url>
+					<server>TomcatServer</server>
+					<path>/treasurer</path>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
 </project>
