--- a/treasurer/src/main/webapp/WEB-INF/web.xml
+++ b/treasurer/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,12 @@
     <error-code>500</error-code>
     <location>/Error500.jsp</location>
 </error-page>
+<servlet>
+<servlet-name>sample2</servlet-name>
+<servlet-class>com.lxisoft.treasurer.controller.OutputServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+<servlet-name>sample2</servlet-name>
+<url-pattern>/login</url-pattern>
 </web-app>
